// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildContextMessagesFromData 防漂移快照 > 图片消息保留（vision 用户消息） > 图片消息组装输出 1`] = `
[
  {
    "content": "你是艾琳。

不要重复用户的话。

【用户人设】
用户名：用户小明
描述：喜欢科幻
性格：理性冷静

【输出格式要求】
请先在 <thought>...</thought> 标签内输出角色的内心想法和心理活动，然后再输出角色的实际对话和行动。两部分必须分开。

【对话历史摘要】
两人正在寻找避难所

【关键事实】
1. 主角失忆
2. 目的地：绿洲城

【角色设定】
一位来自未来的仿生人
性格：温柔但坚定
场景：末日后的废土城市


【对话示例】
你：你是谁？
艾琳：我是艾琳，来自 2077 年。",
    "role": "system",
  },
  {
    "content": "

请记住：主角失忆了。",
    "images": [
      "data:image/png;base64,xxx",
    ],
    "role": "user",
  },
]
`;

exports[`buildContextMessagesFromData 防漂移快照 > 基础场景：人设注入 + 世界书 before_char + 示例对话 + AN + 记忆摘要 > 基础场景组装输出 1`] = `
[
  {
    "content": "你是艾琳。

不要重复用户的话。

【用户人设】
用户名：用户小明
描述：喜欢科幻
性格：理性冷静

【输出格式要求】
请先在 <thought>...</thought> 标签内输出角色的内心想法和心理活动，然后再输出角色的实际对话和行动。两部分必须分开。

【对话历史摘要】
两人正在寻找避难所

【关键事实】
1. 主角失忆
2. 目的地：绿洲城

【角色设定】
废土世界观设定内容
角色背景设定内容
一位来自未来的仿生人
性格：温柔但坚定
场景：末日后的废土城市
",
    "role": "system",
  },
  {
    "content": "用户小明正在被监视。",
    "keepSeparate": true,
    "role": "system",
  },
  {
    "content": "【对话示例】
你：你是谁？
艾琳：我是艾琳，来自 2077 年。",
    "role": "system",
  },
  {
    "content": "今天废土上有沙尘暴。",
    "role": "user",
  },
  {
    "content": "是的，我们得找个避风处。",
    "role": "assistant",
  },
  {
    "content": "那栋大楼看起来安全。

请记住：主角失忆了。",
    "role": "user",
  },
]
`;

exports[`buildContextMessagesFromData 防漂移快照 > 多世界书合并 + at_depth 注入 > 多世界书 at_depth 组装输出 1`] = `
[
  {
    "content": "你是艾琳。

不要重复用户的话。

【用户人设】
用户名：用户小明
描述：喜欢科幻
性格：理性冷静

【输出格式要求】
请先在 <thought>...</thought> 标签内输出角色的内心想法和心理活动，然后再输出角色的实际对话和行动。两部分必须分开。

【对话历史摘要】
两人正在寻找避难所

【关键事实】
1. 主角失忆
2. 目的地：绿洲城

【角色设定】
废土世界观设定内容
角色背景设定内容
一位来自未来的仿生人
性格：温柔但坚定
场景：末日后的废土城市


【对话示例】
你：你是谁？
艾琳：我是艾琳，来自 2077 年。",
    "role": "system",
  },
  {
    "content": "关键事件发生了，废土震动。",
    "role": "user",
  },
  {
    "content": "废土世界观的 at_depth 注入内容",
    "keepSeparate": true,
    "role": "system",
  },
  {
    "content": "角色背景的 at_depth 注入内容",
    "keepSeparate": true,
    "role": "system",
  },
  {
    "content": "我看到了。

请记住：主角失忆了。",
    "role": "assistant",
  },
]
`;
